# gaius

./: .gitignore  LICENSE  Makefile  README.md  gaius_cli  http_adapter.py  loop-sync.sh  mnemos-audit  mnemosyne  pyproject.toml  schema_update.sql  skills-from-git.sh
.github/workflows/: test.yml
benchmarks/: bench_inject.py  bench_longmemeval.py  bench_retrieval.py
benchmarks/demo_corpus/: networking.md  observability.md  security.md  services.md  storage.md
docs/: concord.md  session-jsonl-schema.md
gaius/: ARCHITECTURE.md  __init__.py  __main__.py  _core.py  concord.py  corpus_audit.py  kg.py  landscape.py  maturity.py  mcp_server.py  outcomes.py  parsers.py  raft.py  recentstate.py  reconcile.py  record.py  telemetry.py
hooks/: inject.sh  mnemosyne-check.sh  observe.sh
presets/: default.yaml  k8s.yaml
skill/: SKILL.md  mnemos-scaffold.md
tests/: test_agent_review.py  test_attribution.py  test_completion.py  test_concord.py  test_confirmation_cap.py  test_core.py  test_corpus_audit.py  test_corpus_enforce.py  test_decay_volatility.py  test_kg.py  test_live_ttl.py  test_mnemosyne.py  test_outcomes.py  test_peer_agents.py  test_peer_promote.py  test_recentstate.py  test_reconcile.py  test_record.py  test_rescore.py  test_route_suggest.py
