[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaius-memory"
version = "0.1.0"
description = "Ops memory lifecycle manager for AI coding agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["memory", "ai", "agents", "claude-code", "ops", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.7",
    "sqlite-vec>=0.1",
]
mcp = [
    "mcp>=1.0",
]
http = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
]
all = [
    "gaius-memory[semantic,mcp,http]",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
gaius = "gaius._core:main"

[project.urls]
Homepage = "https://github.com/jkubo/gaius"
Issues = "https://github.com/jkubo/gaius/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gaius*"]

[tool.setuptools.package-data]
gaius = ["py.typed", "../presets/*.yaml", "../skill/SKILL.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
